--- a/Chat App/Base.lproj/Main.storyboard
+++ b/Chat App/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Chat_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,85 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="84" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="frz-83-Qki">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="84" id="9fb-RC-vMX" customClass="customChatCell" customModule="Chat_App" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="84"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9fb-RC-vMX" id="2gb-qn-VQG">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="84"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kaO-hy-Tuy">
+                                                    <rect key="frame" x="8" y="6" width="70" height="70"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="70" id="hhB-fg-Vig"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ayush Verma" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZsZ-on-4lX">
+                                                    <rect key="frame" x="86" y="6" width="159" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="DDG-uG-zAn"/>
+                                                        <constraint firstAttribute="width" constant="159" id="Zhl-dL-3GS"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pzD-CT-D2J">
+                                                    <rect key="frame" x="86" y="31" width="209" height="45"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="11:11 pm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f2h-Ez-L4e">
+                                                    <rect key="frame" x="303" y="46" width="64" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="64" id="2Kh-Hn-Y9K"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="f2h-Ez-L4e" firstAttribute="top" secondItem="2gb-qn-VQG" secondAttribute="topMargin" constant="38" id="1RX-n5-AdL"/>
+                                                <constraint firstItem="ZsZ-on-4lX" firstAttribute="leading" secondItem="kaO-hy-Tuy" secondAttribute="trailing" constant="8" symbolic="YES" id="7MU-vh-F7h"/>
+                                                <constraint firstItem="kaO-hy-Tuy" firstAttribute="top" secondItem="2gb-qn-VQG" secondAttribute="topMargin" constant="-2" id="88x-nk-SC7"/>
+                                                <constraint firstItem="kaO-hy-Tuy" firstAttribute="top" secondItem="ZsZ-on-4lX" secondAttribute="top" id="9aV-4F-10W"/>
+                                                <constraint firstItem="kaO-hy-Tuy" firstAttribute="leading" secondItem="2gb-qn-VQG" secondAttribute="leadingMargin" id="BdD-m0-Sp6"/>
+                                                <constraint firstItem="ZsZ-on-4lX" firstAttribute="leading" secondItem="pzD-CT-D2J" secondAttribute="leading" id="L0Y-dh-hQE"/>
+                                                <constraint firstItem="kaO-hy-Tuy" firstAttribute="bottom" secondItem="pzD-CT-D2J" secondAttribute="bottom" id="Zuk-7H-orT"/>
+                                                <constraint firstItem="f2h-Ez-L4e" firstAttribute="leading" secondItem="pzD-CT-D2J" secondAttribute="trailing" constant="8" symbolic="YES" id="hQc-dG-LCL"/>
+                                                <constraint firstItem="f2h-Ez-L4e" firstAttribute="trailing" secondItem="2gb-qn-VQG" secondAttribute="trailingMargin" id="hTC-eI-fnU"/>
+                                                <constraint firstItem="pzD-CT-D2J" firstAttribute="bottom" secondItem="f2h-Ez-L4e" secondAttribute="bottom" id="kZ5-Y7-b9r"/>
+                                                <constraint firstItem="pzD-CT-D2J" firstAttribute="top" secondItem="ZsZ-on-4lX" secondAttribute="bottom" constant="4" id="llC-e1-Vjf"/>
+                                                <constraint firstItem="kaO-hy-Tuy" firstAttribute="centerY" secondItem="2gb-qn-VQG" secondAttribute="centerY" id="slu-lB-x3x"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="messagePreviewLabel" destination="pzD-CT-D2J" id="8Su-VJ-b6v"/>
+                                            <outlet property="personNameLabel" destination="ZsZ-on-4lX" id="Iin-Rn-mP0"/>
+                                            <outlet property="profileImageView" destination="2gb-qn-VQG" id="FT5-ET-PDk"/>
+                                            <outlet property="timeLabel" destination="f2h-Ez-L4e" id="nS3-hy-LkD"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="tabelView" destination="frz-83-Qki" id="Vdd-IN-O3i"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-79.200000000000003" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
